[package]
name = "swc-plugin-vue-macros-define-render"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# <https://swc.rs/docs/plugin/publishing#advanced-improving-your-plugin>
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
serde = "1"
swc_core = { version = "0.43.*", features = ["plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
